updated style for overlaping issues on the news landing page

--- a/public/css/style_2.css
+++ b/public/css/style_2.css
@@ -774,6 +774,8 @@ top: 0;
 /*-------news-landing-page-----*/
      .blog-spotlight{
       min-height: 100vh;
+      position: relative;
+      z-index: 11;
      }
      .blog-right-col{
       background-image: url(../images/spotlight-img.png);
